crates/preprocessor/tests/snapshots/main__elseif_directive_expansion_3-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 373
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      48,
      51,
      20,
      23
    ],
    [
      52,
      55,
      24,
      27
    ],
    [
      55,
      56,
      27,
      28
    ]
  ],
  "expanded_symbols": [
    [
      18,
      21,
      18,
      21,
      0,
      0
    ],
    [
      35,
      38,
      35,
      38,
      0,
      0
    ]
  ]
}
