crates/preprocessor/tests/snapshots/main__elseif_directive_expansion_4.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 404
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO 3





int baz;


