crates/preprocessor/tests/snapshots/main__elseif_directive_expansion_5-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      87,
      88,
      20,
      21
    ],
    [
      88,
      91,
      21,
      24
    ],
    [
      92,
      95,
      25,
      28
    ],
    [
      95,
      96,
      28,
      29
    ],
    [
      96,
      97,
      29,
      30
    ],
    [
      103,
      104,
      30,
      31
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 18,
        "end": 21
      },
      "expanded_range": {
        "start": 18,
        "end": 21
      },
      "idx": 0,
      "file_id": 0
    },
    {
      "range": {
        "start": 64,
        "end": 67
      },
      "expanded_range": {
        "start": 64,
        "end": 67
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
