crates/preprocessor/tests/snapshots/main__if_directive_defined-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      32,
      35,
      17,
      20
    ],
    [
      36,
      39,
      21,
      24
    ],
    [
      39,
      40,
      24,
      25
    ],
    [
      47,
      47,
      26,
      26
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 24,
        "end": 27
      },
      "expanded_range": {
        "start": 24,
        "end": 27
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
