crates/preprocessor/tests/snapshots/main__if_directive_defined.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 101
expression: res.preprocessed_text()
---
#define FOO

    int foo;

