crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_1-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 24,
        "end": 27
      },
      "expanded_range": {
        "start": 24,
        "end": 27
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
