crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_2-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 124
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      19,
      12,
      19
    ],
    [
      20,
      23,
      20,
      23
    ],
    [
      59,
      62,
      29,
      32
    ],
    [
      63,
      66,
      33,
      36
    ],
    [
      66,
      67,
      36,
      37
    ],
    [
      72,
      75,
      42,
      45
    ],
    [
      76,
      79,
      46,
      49
    ],
    [
      79,
      80,
      49,
      50
    ]
  ],
  "expanded_symbols": [
    [
      36,
      39,
      36,
      39,
      0,
      0
    ],
    [
      51,
      54,
      51,
      54,
      1,
      0
    ]
  ]
}
